--- a/public/style.css
+++ b/public/style.css
@@ -5,7 +5,15 @@
   margin: 2vw 2vw;
   padding: 3vw 3vw;
   max-height: 70vw;
+}
 
+.chat-messages {
+  height: 200px;
+  width: 200px;
+  border: 1px solid black;
+  overflow: auto;
+  font-family: Verdana;
+  font-size: 11px;
 }
 
 .lobbybox {
