--- a/public/style.css
+++ b/public/style.css
@@ -13,3 +13,15 @@
   margin: 2vw 2vw;
   padding: 3vw 3vw;
 }
+
+canvas {
+  width: 100%;
+  height: 100%;
+}
+
+.canvas {
+  /* width: 40vw; */
+  /* height: 600px; */
+  float: left;
+  border: 1px solid black;
+}
