--- a/public/style.css
+++ b/public/style.css
@@ -62,18 +62,23 @@ body {
 }
 
 .timer {
-  width: 6vw;
-  height: 6vw;
-  background-color: #ff9393;
   position: absolute;
   left: 64vw;
   top: 3vw;
-  border-radius: 50%;
 }
 
 .timer-text {
-  margin: 1.3vw 2.3vw;
-  font-size: 2em;
+  font-size: 30px;
+  text-align: center;
+  background-color: #ff9393;
+  width: 30px;
+  height: 30px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-radius: 50%;
+  padding-left: 20px;
+  padding-right: 20px;
+  line-height: 30px;
 }
 
 .input {
