--- a/public/style.css
+++ b/public/style.css
@@ -85,7 +85,7 @@ body {
   background-color: rgba(255, 255, 255, 0.75);
   margin: 15vw 26vw;
   display: inline-block;
-  height: 21vw;
+  height: 26vw;
   width: 40vw;
   padding: 2vw 4vw;
   border-radius: 2vw;
@@ -132,6 +132,10 @@ body {
 
 .btn:hover {
   background-position: right center;
+}
+
+logo {
+  margin: -1vw 4vw;
 }
 
 * {
