--- a/public/style.css
+++ b/public/style.css
@@ -6,6 +6,7 @@ body {
   background: linear-gradient(237deg, #40b9ff, #87ffbd);
   background-size: 400% 400%;
   animation: AnimationName 15s ease infinite;
+  margin: 0;
 }
 
 @keyframes AnimationName {
@@ -18,6 +19,28 @@ body {
   100% {
     background-position: 0% 50%;
   }
+}
+
+.gameroom-body {
+  background-image: url('background.png');
+  background-repeat: repeat;
+  width: 100vw;
+  height: 100vw;
+}
+
+.navbar {
+  height: 200px;
+}
+
+.gameroom-logo {
+  width: 288px;
+  height: 158px;
+  display: inline-block;
+  float: left;
+}
+
+.clear {
+  clear: both;
 }
 
 .chatbox {
@@ -163,23 +186,28 @@ img.eraser {
 }
 
 .timer {
-  position: absolute;
+  /* position: absolute;
   left: 64vw;
-  top: 3vw;
+  top: 3vw; */
+  background-image: url('timer-small.png');
+  background-repeat: no-repeat;
+  width: 100px;
+  height: 100px;
+  display: inline-block;
 }
 
 .timer-text {
   font-size: 30px;
   text-align: center;
-  background-color: #ff9393;
+  /* background-color: #ff9393;
   width: 30px;
   height: 30px;
   padding-top: 20px;
   padding-bottom: 20px;
   border-radius: 50%;
   padding-left: 20px;
-  padding-right: 20px;
-  line-height: 30px;
+  padding-right: 20px; */
+  line-height: 100px;
 }
 
 .play-card {
@@ -247,7 +275,7 @@ img.eraser {
 }
 
 .winner-card {
-  background-color: rgba(0, 0, 0, .7);
+  background-color: rgba(0, 0, 0, 0.7);
   display: inline-block;
   position: absolute;
   top: 17vw;
@@ -258,7 +286,6 @@ img.eraser {
 }
 
 .winner-text {
-
 }
 
 * {
