--- a/public/style.css
+++ b/public/style.css
@@ -29,14 +29,55 @@ body {
 }
 
 .navbar {
-  height: 200px;
+  height: 170px;
 }
 
 .gameroom-logo {
   width: 288px;
   height: 158px;
+  float: left;
+  margin-top: 20px;
+  margin-left: 10px;
+}
+
+.hangman-board {
+  background-color: white;
+  border-radius: 30px;
+  width: 41%;
+  height: 100px;
+  display: inline-block;
+  margin-top: 40px;
+  margin-left: 12%;
+}
+
+.hangman {
+  width: 100%;
+  text-align: center;
+  margin-top: 10px;
+  font-size: 40px;
+}
+
+.circle-left {
   display: inline-block;
   float: left;
+  width: 17px;
+  height: 17px;
+  background-color: #008ccd;
+}
+
+.circle-right {
+  display: inline-block;
+  float: right;
+  width: 17px;
+  height: 17px;
+  background-color: #008ccd;
+}
+
+.guess-the-word {
+  display: block;
+  margin: -20px auto 0;
+  width: 100%;
+  text-align: center;
 }
 
 .clear {
@@ -194,6 +235,9 @@ img.eraser {
   width: 100px;
   height: 100px;
   display: inline-block;
+  float: right;
+  margin-top: 25px;
+  margin-right: 30px;
 }
 
 .timer-text {
