--- a/public/style.css
+++ b/public/style.css
@@ -25,7 +25,9 @@ body {
   background-image: url('background.png');
   background-repeat: repeat;
   width: 100vw;
-  height: 100vw;
+  margin: 0;
+  padding: 0;
+  padding-bottom: 10vw;
 }
 
 .navbar {
@@ -33,21 +35,22 @@ body {
 }
 
 .gameroom-logo {
-  width: 288px;
+  width: 21vw;
   height: 158px;
   float: left;
-  margin-top: 20px;
-  margin-left: 10px;
+  margin-top: 10px;
+  margin-left: 20px;
 }
 
 .hangman-board {
   background-color: white;
   border-radius: 30px;
-  width: 41%;
+  width: 45%;
   height: 100px;
   display: inline-block;
   margin-top: 40px;
-  margin-left: 12%;
+  margin-left: 11.75%;
+  box-shadow: #333333 0px 3px 20px;
 }
 
 .hangman {
@@ -63,6 +66,9 @@ body {
   width: 17px;
   height: 17px;
   background-color: #008ccd;
+  border-radius: 17px;
+  margin-left: 20px;
+  margin-top: -20px;
 }
 
 .circle-right {
@@ -71,12 +77,52 @@ body {
   width: 17px;
   height: 17px;
   background-color: #008ccd;
+  border-radius: 17px;
+  margin-right: 20px;
+  margin-top: -20px;
+}
+
+.circle-left-brown {
+  isplay: inline-block;
+  float: left;
+  width: 17px;
+  height: 17px;
+  background-color: #a64300;
+  border-radius: 17px;
+  margin-top: -33px;
+}
+
+.circle-right-brown {
+  display: inline-block;
+  float: right;
+  width: 17px;
+  height: 17px;
+  background-color: #a64300;
+  border-radius: 17px;
+  margin-top: -33px;
+}
+
+.players-title {
+  width: 100%;
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.player-cards-container {
+  min-height: 29.5vw;
+}
+
+.gameroom-container {
+  display: block;
+  width: 100%;
+  margin: 0 auto;
 }
 
 .guess-the-word {
   display: block;
   margin: -20px auto 0;
-  width: 100%;
+  width: 80%;
   text-align: center;
 }
 
@@ -105,43 +151,61 @@ body {
 }
 
 .lobbybox {
-  background-color: #ebff99;
-  width: 15vw;
+  background-color: #ff8900;
+  width: 17vw;
   float: left;
-  margin: 1vw 1vw;
-  padding: 2vw 2vw;
-  height: 40vw;
+  margin: 0.5vw 1vw 1vw 4vw;
+  padding: 1vw 1vw;
+  height: 39vw;
   overflow: auto;
-  box-shadow: 0 0 1rem #000000;
+  box-shadow: 0 0 1rem #333333;
+  border-radius: 30px;
+  border: 8px solid white;
 }
 
 .playercard {
-  background-color: #52c5ff;
-  margin: 1vw 1vw;
+  background-color: #ffd200;
+  margin: 1vw 0vw;
   padding: 1vw 1vw;
   border-radius: 10px;
+  border: 3px solid #e15c11;
 }
 
 .canvas {
-  width: 49vw;
-  height: 44vw;
-  float: left;
-  margin: 1vw 1vw;
+  width: 58vw;
+  height: 42vw;
+  float: right;
+  margin: 0.25vw 15vw 0 1vw;
   background-color: white;
-  box-shadow: 0 0 1rem #000000;
+  box-shadow: 0 0 1rem #a35c5c;
+  border: 5px solid black;
+}
+
+#round-text {
+  width: 220px;
+  height: 40px;
+  background-color: #ffd200;
+  color: black;
+  font-size: 25px;
+  text-align: center;
+  line-height: 39px;
+  margin-top: -60px;
+  margin-left: 10px;
 }
 
 #color-pallete {
-  width: 49vw;
-  height: 40px;
-  margin: 9vw 0.5vw;
-  display: block;
+  width: 7vw;
+  margin: 0;
+  display: inline-block;
+  float: right;
+  margin-top: -575px;
+  margin-right: -9vw;
 }
 
 .color-palette-square {
-  width: 6%;
-  margin: 0.25%;
-  height: 40px;
+  width: 46%;
+  margin: 2%;
+  height: 45px;
   display: inline-block;
   float: left;
   padding: 0px;
@@ -195,7 +259,10 @@ img.eraser {
   height: 30px;
   width: auto;
 }
-
+.right {
+  float: right;
+  margin-bottom: 20px;
+}
 .clear-btn {
   display: block;
   width: 97%;
@@ -227,17 +294,14 @@ img.eraser {
 }
 
 .timer {
-  /* position: absolute;
-  left: 64vw;
-  top: 3vw; */
-  background-image: url('timer-small.png');
+  background-image: url(timer-small.png);
   background-repeat: no-repeat;
   width: 100px;
   height: 100px;
   display: inline-block;
   float: right;
-  margin-top: 25px;
-  margin-right: 30px;
+  margin-top: 40px;
+  margin-right: 39px;
 }
 
 .timer-text {
@@ -266,8 +330,22 @@ img.eraser {
 }
 
 .input {
-  width: 16vw;
-  border-radius: 1vw;
+  width: 11vw;
+  height: 30px;
+  border: 3px solid #e15c11;
+  padding: 5px 10px 2px;
+  border-top-left-radius: 1vw;
+  border-bottom-left-radius: 1vw;
+}
+
+.go-btn {
+  width: 4vw;
+  height: 43px;
+  font-size: 16px;
+  border: 3px solid #e15c11;
+  margin-left: -2px;
+  border-top-right-radius: 1vw;
+  border-bottom-right-radius: 1vw;
 }
 
 .quick-play {
@@ -317,20 +395,20 @@ img.eraser {
   width: 30vw;
   height: 15vw;
 
-	transform: translatey(0px);
-	animation: float 6s ease-in-out infinite;
+  transform: translatey(0px);
+  animation: float 6s ease-in-out infinite;
 }
 
 @keyframes float {
-	0% {
-		transform: translatey(0px);
-	}
-	50% {
-		transform: translatey(-20px);
-	}
-	100% {
-		transform: translatey(0px);
-	}
+  0% {
+    transform: translatey(0px);
+  }
+  50% {
+    transform: translatey(-20px);
+  }
+  100% {
+    transform: translatey(0px);
+  }
 }
 
 .winner-card {
@@ -359,73 +437,71 @@ img.eraser {
   background-color: rgba(169, 81, 81, 0.5);
 }
 
-
-
 * {
   font-family: 'Lato', sans-serif;
 }
 
 .cssload-loader {
-	position: relative;
-	left: calc(50% - 140px);
-	width: 280px;
-	height: 280px;
-	border-radius: 50%;
-	perspective: 3500px;
+  position: relative;
+  left: calc(50% - 140px);
+  width: 280px;
+  height: 280px;
+  border-radius: 50%;
+  perspective: 3500px;
 }
 
 .cssload-inner {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	box-sizing: border-box;
-	border-radius: 50%;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  border-radius: 50%;
 }
 
 .cssload-inner.cssload-one {
-	left: 0%;
-	top: 0%;
-	animation: cssload-rotate-one 1.15s linear infinite;
-	border-bottom: 13px solid rgb(255,66,255);
+  left: 0%;
+  top: 0%;
+  animation: cssload-rotate-one 1.15s linear infinite;
+  border-bottom: 13px solid rgb(255, 66, 255);
 }
 
 .cssload-inner.cssload-two {
-	right: 0%;
-	top: 0%;
-	animation: cssload-rotate-two 1.15s linear infinite;
-	border-right: 13px solid rgb(255,121,59);
+  right: 0%;
+  top: 0%;
+  animation: cssload-rotate-two 1.15s linear infinite;
+  border-right: 13px solid rgb(255, 121, 59);
 }
 
 .cssload-inner.cssload-three {
-	right: 0%;
-	bottom: 0%;
-	animation: cssload-rotate-three 1.15s linear infinite;
-	border-top: 13px solid rgb(255,255,61);
+  right: 0%;
+  bottom: 0%;
+  animation: cssload-rotate-three 1.15s linear infinite;
+  border-top: 13px solid rgb(255, 255, 61);
 }
 
 @keyframes cssload-rotate-one {
-	0% {
-		transform: rotateX(35deg) rotateY(-45deg) rotateZ(0deg);
-	}
-	100% {
-		transform: rotateX(35deg) rotateY(-45deg) rotateZ(360deg);
-	}
+  0% {
+    transform: rotateX(35deg) rotateY(-45deg) rotateZ(0deg);
+  }
+  100% {
+    transform: rotateX(35deg) rotateY(-45deg) rotateZ(360deg);
+  }
 }
 
 @keyframes cssload-rotate-two {
-	0% {
-		transform: rotateX(50deg) rotateY(10deg) rotateZ(0deg);
-	}
-	100% {
-		transform: rotateX(50deg) rotateY(10deg) rotateZ(360deg);
-	}
+  0% {
+    transform: rotateX(50deg) rotateY(10deg) rotateZ(0deg);
+  }
+  100% {
+    transform: rotateX(50deg) rotateY(10deg) rotateZ(360deg);
+  }
 }
 
 @keyframes cssload-rotate-three {
-	0% {
-		transform: rotateX(35deg) rotateY(55deg) rotateZ(0deg);
-	}
-	100% {
-		transform: rotateX(35deg) rotateY(55deg) rotateZ(360deg);
-	}
+  0% {
+    transform: rotateX(35deg) rotateY(55deg) rotateZ(0deg);
+  }
+  100% {
+    transform: rotateX(35deg) rotateY(55deg) rotateZ(360deg);
+  }
 }
