--- a/public/style.css
+++ b/public/style.css
@@ -423,6 +423,10 @@ img.eraser {
 }
 
 .winner-text {
+  text-align: center;
+  font-size: 30px;
+  color: #ffffff;
+  margin: auto auto;
 }
 
 .loading-text {
