--- a/public/style.css
+++ b/public/style.css
@@ -169,6 +169,29 @@ body {
   padding: 1vw 1vw;
   border-radius: 10px;
   border: 3px solid #e15c11;
+  width: 14.5vw;
+  display: inline-block;
+}
+
+.single-player-container {
+  width: 42vw;
+}
+
+.message {
+  display: inline-block;
+  background-color: #ecf9ff;
+  position: absolute;
+  margin: 1.5vw 1vw;
+  padding: 1vw 1vw;
+  height: 1.5vw;
+  width: 14vw;
+  border-radius: 1vw;
+  text-align: center;
+  box-shadow: 0 0 1px #000000;
+}
+
+.do-display {
+  display: inline-block;
 }
 
 .canvas {
