--- a/public/style.css
+++ b/public/style.css
@@ -466,9 +466,11 @@ img.eraser {
   text-align: center;
   font-size: 30px;
   color: #ffffff;
+  margin-top: 55px;
 }
 
 .choose-word-button {
+  flex: 1/3;
   font-family: Verdana;
   background-color: orange;
   border: none;
@@ -499,7 +501,7 @@ img.eraser {
 }
 
 .choose-buttons-margin {
-  margin-top: 10px;
+  margin-top: 40px;
 }
 
 .loading-text2 {
