--- a/public/style.css
+++ b/public/style.css
@@ -35,11 +35,11 @@ body {
 }
 
 .gameroom-logo {
-  width: 16%;
+  width: 18.5%;
   height: 158px;
   float: left;
   margin-top: 10px;
-  margin-left: 6.5%;
+  margin-left: 4.25%;
 }
 
 .hangman-board {
@@ -110,7 +110,7 @@ body {
 }
 
 .player-cards-container {
-  min-height: 82%;
+  min-height: 79%;
 }
 
 .gameroom-container {
@@ -190,18 +190,18 @@ body {
   box-shadow: 0 0 1px #000000;
 }
 .message:after {
-	content: '';
-	position: absolute;
-	left: 0;
-	top: 50%;
-	width: 0;
-	height: 0;
-	border: 0.906em solid transparent;
-	border-right-color: #ecf9ff;
-	border-left: 0;
-	border-bottom: 0;
-	margin-top: -0.453em;
-	margin-left: -0.906em;
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 0;
+  height: 0;
+  border: 0.906em solid transparent;
+  border-right-color: #ecf9ff;
+  border-left: 0;
+  border-bottom: 0;
+  margin-top: -0.453em;
+  margin-left: -0.906em;
 }
 
 .do-display {
@@ -209,8 +209,8 @@ body {
 }
 
 .canvas {
-  width: 58vw;
-  height: 42vw;
+  width: 57%;
+  height: 580px;
   float: right;
   margin: 0.25vw 15vw 0 1vw;
   background-color: white;
@@ -235,7 +235,7 @@ body {
   margin: 0;
   display: inline-block;
   float: right;
-  margin-top: -802px;
+  margin-top: -580px;
   margin-right: -9vw;
 }
 
@@ -338,7 +338,7 @@ img.eraser {
   display: inline-block;
   float: right;
   margin-top: 40px;
-  margin-right: 7.2vw;
+  margin-right: 6.4vw;
 }
 
 .timer-text {
@@ -473,7 +473,7 @@ img.eraser {
   text-align: center;
   font-size: 30px;
   color: #ffffff;
-  margin-top: 55px;
+  margin-top: 25px;
 }
 
 .choose-word-button {
@@ -508,7 +508,7 @@ img.eraser {
 }
 
 .choose-buttons-margin {
-  margin-top: 40px;
+  margin-top: 10px;
 }
 
 .loading-text2 {
